--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ excludes=
 file.reference.com.mysql.jdbc_5.1.5.jar=lib\\com.mysql.jdbc_5.1.5.jar
 file.reference.commons-logging-1.2-javadoc.jar=lib\\commons-logging-1.2-javadoc.jar
 file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
+file.reference.org.json.jar=lib\\org.json.jar
 file.reference.spring-aop-4.3.9.RELEASE-javadoc.jar=lib\\spring-aop-4.3.9.RELEASE-javadoc.jar
 file.reference.spring-aop-4.3.9.RELEASE-sources.jar=lib\\spring-aop-4.3.9.RELEASE-sources.jar
 file.reference.spring-aop-4.3.9.RELEASE.jar=lib\\spring-aop-4.3.9.RELEASE.jar
@@ -161,7 +162,8 @@ javac.classpath=\
     ${file.reference.commons-logging-1.2-javadoc.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.org.json.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
