change libs and use restful service

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,67 +29,45 @@ excludes=
 file.reference.com.mysql.jdbc_5.1.5.jar=lib\\com.mysql.jdbc_5.1.5.jar
 file.reference.commons-logging-1.2-javadoc.jar=lib\\commons-logging-1.2-javadoc.jar
 file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
-file.reference.org.json.jar=lib\\org.json.jar
-file.reference.spring-aop-4.3.9.RELEASE-javadoc.jar=lib\\spring-aop-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-aop-4.3.9.RELEASE-sources.jar=lib\\spring-aop-4.3.9.RELEASE-sources.jar
-file.reference.spring-aop-4.3.9.RELEASE.jar=lib\\spring-aop-4.3.9.RELEASE.jar
-file.reference.spring-aspects-4.3.9.RELEASE-javadoc.jar=lib\\spring-aspects-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-aspects-4.3.9.RELEASE-sources.jar=lib\\spring-aspects-4.3.9.RELEASE-sources.jar
-file.reference.spring-aspects-4.3.9.RELEASE.jar=lib\\spring-aspects-4.3.9.RELEASE.jar
-file.reference.spring-beans-4.3.9.RELEASE-javadoc.jar=lib\\spring-beans-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-beans-4.3.9.RELEASE-sources.jar=lib\\spring-beans-4.3.9.RELEASE-sources.jar
-file.reference.spring-beans-4.3.9.RELEASE.jar=lib\\spring-beans-4.3.9.RELEASE.jar
-file.reference.spring-context-4.3.9.RELEASE-javadoc.jar=lib\\spring-context-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-context-4.3.9.RELEASE-sources.jar=lib\\spring-context-4.3.9.RELEASE-sources.jar
-file.reference.spring-context-4.3.9.RELEASE.jar=lib\\spring-context-4.3.9.RELEASE.jar
-file.reference.spring-context-support-4.3.9.RELEASE-javadoc.jar=lib\\spring-context-support-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-context-support-4.3.9.RELEASE-sources.jar=lib\\spring-context-support-4.3.9.RELEASE-sources.jar
-file.reference.spring-context-support-4.3.9.RELEASE.jar=lib\\spring-context-support-4.3.9.RELEASE.jar
-file.reference.spring-core-4.3.9.RELEASE-javadoc.jar=lib\\spring-core-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-core-4.3.9.RELEASE-sources.jar=lib\\spring-core-4.3.9.RELEASE-sources.jar
-file.reference.spring-core-4.3.9.RELEASE.jar=lib\\spring-core-4.3.9.RELEASE.jar
-file.reference.spring-expression-4.3.9.RELEASE-javadoc.jar=lib\\spring-expression-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-expression-4.3.9.RELEASE-sources.jar=lib\\spring-expression-4.3.9.RELEASE-sources.jar
-file.reference.spring-expression-4.3.9.RELEASE.jar=lib\\spring-expression-4.3.9.RELEASE.jar
-file.reference.spring-instrument-4.3.9.RELEASE-javadoc.jar=lib\\spring-instrument-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-instrument-4.3.9.RELEASE-sources.jar=lib\\spring-instrument-4.3.9.RELEASE-sources.jar
-file.reference.spring-instrument-4.3.9.RELEASE.jar=lib\\spring-instrument-4.3.9.RELEASE.jar
-file.reference.spring-instrument-tomcat-4.3.9.RELEASE-javadoc.jar=lib\\spring-instrument-tomcat-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-instrument-tomcat-4.3.9.RELEASE-sources.jar=lib\\spring-instrument-tomcat-4.3.9.RELEASE-sources.jar
-file.reference.spring-instrument-tomcat-4.3.9.RELEASE.jar=lib\\spring-instrument-tomcat-4.3.9.RELEASE.jar
-file.reference.spring-jdbc-4.3.9.RELEASE-javadoc.jar=lib\\spring-jdbc-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-jdbc-4.3.9.RELEASE-sources.jar=lib\\spring-jdbc-4.3.9.RELEASE-sources.jar
-file.reference.spring-jdbc-4.3.9.RELEASE.jar=lib\\spring-jdbc-4.3.9.RELEASE.jar
-file.reference.spring-jms-4.3.9.RELEASE-javadoc.jar=lib\\spring-jms-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-jms-4.3.9.RELEASE-sources.jar=lib\\spring-jms-4.3.9.RELEASE-sources.jar
-file.reference.spring-jms-4.3.9.RELEASE.jar=lib\\spring-jms-4.3.9.RELEASE.jar
-file.reference.spring-messaging-4.3.9.RELEASE-javadoc.jar=lib\\spring-messaging-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-messaging-4.3.9.RELEASE-sources.jar=lib\\spring-messaging-4.3.9.RELEASE-sources.jar
-file.reference.spring-messaging-4.3.9.RELEASE.jar=lib\\spring-messaging-4.3.9.RELEASE.jar
-file.reference.spring-orm-4.3.9.RELEASE-javadoc.jar=lib\\spring-orm-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-orm-4.3.9.RELEASE-sources.jar=lib\\spring-orm-4.3.9.RELEASE-sources.jar
-file.reference.spring-orm-4.3.9.RELEASE.jar=lib\\spring-orm-4.3.9.RELEASE.jar
-file.reference.spring-oxm-4.3.9.RELEASE-javadoc.jar=lib\\spring-oxm-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-oxm-4.3.9.RELEASE-sources.jar=lib\\spring-oxm-4.3.9.RELEASE-sources.jar
-file.reference.spring-oxm-4.3.9.RELEASE.jar=lib\\spring-oxm-4.3.9.RELEASE.jar
-file.reference.spring-test-4.3.9.RELEASE-javadoc.jar=lib\\spring-test-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-test-4.3.9.RELEASE-sources.jar=lib\\spring-test-4.3.9.RELEASE-sources.jar
-file.reference.spring-test-4.3.9.RELEASE.jar=lib\\spring-test-4.3.9.RELEASE.jar
-file.reference.spring-tx-4.3.9.RELEASE-javadoc.jar=lib\\spring-tx-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-tx-4.3.9.RELEASE-sources.jar=lib\\spring-tx-4.3.9.RELEASE-sources.jar
-file.reference.spring-tx-4.3.9.RELEASE.jar=lib\\spring-tx-4.3.9.RELEASE.jar
-file.reference.spring-web-4.3.9.RELEASE-javadoc.jar=lib\\spring-web-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-web-4.3.9.RELEASE-sources.jar=lib\\spring-web-4.3.9.RELEASE-sources.jar
-file.reference.spring-web-4.3.9.RELEASE.jar=lib\\spring-web-4.3.9.RELEASE.jar
-file.reference.spring-webmvc-4.3.9.RELEASE-javadoc.jar=lib\\spring-webmvc-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-webmvc-4.3.9.RELEASE-sources.jar=lib\\spring-webmvc-4.3.9.RELEASE-sources.jar
-file.reference.spring-webmvc-4.3.9.RELEASE.jar=lib\\spring-webmvc-4.3.9.RELEASE.jar
-file.reference.spring-webmvc-portlet-4.3.9.RELEASE-javadoc.jar=lib\\spring-webmvc-portlet-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-webmvc-portlet-4.3.9.RELEASE-sources.jar=lib\\spring-webmvc-portlet-4.3.9.RELEASE-sources.jar
-file.reference.spring-webmvc-portlet-4.3.9.RELEASE.jar=lib\\spring-webmvc-portlet-4.3.9.RELEASE.jar
-file.reference.spring-websocket-4.3.9.RELEASE-javadoc.jar=lib\\spring-websocket-4.3.9.RELEASE-javadoc.jar
-file.reference.spring-websocket-4.3.9.RELEASE-sources.jar=lib\\spring-websocket-4.3.9.RELEASE-sources.jar
-file.reference.spring-websocket-4.3.9.RELEASE.jar=lib\\spring-websocket-4.3.9.RELEASE.jar
+file.reference.jackson-annotations-2.4.0.jar=lib\\jackson-annotations-2.4.0.jar
+file.reference.jackson-core-2.4.1.jar=lib\\jackson-core-2.4.1.jar
+file.reference.jackson-databind-2.4.1.jar=lib\\jackson-databind-2.4.1.jar
+file.reference.spring-aop-4.0.1.RELEASE-javadoc.jar=lib\\spring-aop-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-aop-4.0.1.RELEASE-sources.jar=lib\\spring-aop-4.0.1.RELEASE-sources.jar
+file.reference.spring-aop-4.0.1.RELEASE.jar=lib\\spring-aop-4.0.1.RELEASE.jar
+file.reference.spring-beans-4.0.1.RELEASE-javadoc.jar=lib\\spring-beans-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-beans-4.0.1.RELEASE-sources.jar=lib\\spring-beans-4.0.1.RELEASE-sources.jar
+file.reference.spring-beans-4.0.1.RELEASE.jar=lib\\spring-beans-4.0.1.RELEASE.jar
+file.reference.spring-context-4.0.1.RELEASE-javadoc.jar=lib\\spring-context-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-context-4.0.1.RELEASE-sources.jar=lib\\spring-context-4.0.1.RELEASE-sources.jar
+file.reference.spring-context-4.0.1.RELEASE.jar=lib\\spring-context-4.0.1.RELEASE.jar
+file.reference.spring-context-support-4.0.1.RELEASE-javadoc.jar=lib\\spring-context-support-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-context-support-4.0.1.RELEASE-sources.jar=lib\\spring-context-support-4.0.1.RELEASE-sources.jar
+file.reference.spring-context-support-4.0.1.RELEASE.jar=lib\\spring-context-support-4.0.1.RELEASE.jar
+file.reference.spring-core-4.0.1.RELEASE-javadoc.jar=lib\\spring-core-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-core-4.0.1.RELEASE-sources.jar=lib\\spring-core-4.0.1.RELEASE-sources.jar
+file.reference.spring-core-4.0.1.RELEASE.jar=lib\\spring-core-4.0.1.RELEASE.jar
+file.reference.spring-expression-4.0.1.RELEASE-javadoc.jar=lib\\spring-expression-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-expression-4.0.1.RELEASE-sources.jar=lib\\spring-expression-4.0.1.RELEASE-sources.jar
+file.reference.spring-expression-4.0.1.RELEASE.jar=lib\\spring-expression-4.0.1.RELEASE.jar
+file.reference.spring-jdbc-4.0.1.RELEASE-javadoc.jar=lib\\spring-jdbc-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-jdbc-4.0.1.RELEASE-sources.jar=lib\\spring-jdbc-4.0.1.RELEASE-sources.jar
+file.reference.spring-jdbc-4.0.1.RELEASE.jar=lib\\spring-jdbc-4.0.1.RELEASE.jar
+file.reference.spring-orm-4.0.1.RELEASE-javadoc.jar=lib\\spring-orm-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-orm-4.0.1.RELEASE-sources.jar=lib\\spring-orm-4.0.1.RELEASE-sources.jar
+file.reference.spring-orm-4.0.1.RELEASE.jar=lib\\spring-orm-4.0.1.RELEASE.jar
+file.reference.spring-tx-4.0.1.RELEASE-javadoc.jar=lib\\spring-tx-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-tx-4.0.1.RELEASE-sources.jar=lib\\spring-tx-4.0.1.RELEASE-sources.jar
+file.reference.spring-tx-4.0.1.RELEASE.jar=lib\\spring-tx-4.0.1.RELEASE.jar
+file.reference.spring-web-4.0.1.RELEASE-javadoc.jar=lib\\spring-web-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-web-4.0.1.RELEASE-sources.jar=lib\\spring-web-4.0.1.RELEASE-sources.jar
+file.reference.spring-web-4.0.1.RELEASE.jar=lib\\spring-web-4.0.1.RELEASE.jar
+file.reference.spring-webmvc-4.0.1.RELEASE-javadoc.jar=lib\\spring-webmvc-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-webmvc-4.0.1.RELEASE-sources.jar=lib\\spring-webmvc-4.0.1.RELEASE-sources.jar
+file.reference.spring-webmvc-4.0.1.RELEASE.jar=lib\\spring-webmvc-4.0.1.RELEASE.jar
+file.reference.spring-webmvc-portlet-4.0.1.RELEASE-javadoc.jar=lib\\spring-webmvc-portlet-4.0.1.RELEASE-javadoc.jar
+file.reference.spring-webmvc-portlet-4.0.1.RELEASE-sources.jar=lib\\spring-webmvc-portlet-4.0.1.RELEASE-sources.jar
+file.reference.spring-webmvc-portlet-4.0.1.RELEASE.jar=lib\\spring-webmvc-portlet-4.0.1.RELEASE.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -99,71 +77,49 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.spring-aop-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-aop-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-aop-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-aspects-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-aspects-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-aspects-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-beans-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-beans-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-beans-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-context-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-context-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-context-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-context-support-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-context-support-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-context-support-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-core-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-core-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-core-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-expression-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-expression-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-expression-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-instrument-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-instrument-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-instrument-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-instrument-tomcat-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-instrument-tomcat-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-instrument-tomcat-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-jdbc-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-jdbc-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-jdbc-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-jms-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-jms-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-jms-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-messaging-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-messaging-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-messaging-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-orm-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-orm-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-orm-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-oxm-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-oxm-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-oxm-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-test-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-test-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-test-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-tx-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-tx-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-tx-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-web-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-web-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-web-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-webmvc-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-webmvc-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-webmvc-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-webmvc-portlet-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-webmvc-portlet-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-webmvc-portlet-4.3.9.RELEASE.jar}:\
-    ${file.reference.spring-websocket-4.3.9.RELEASE-javadoc.jar}:\
-    ${file.reference.spring-websocket-4.3.9.RELEASE-sources.jar}:\
-    ${file.reference.spring-websocket-4.3.9.RELEASE.jar}:\
     ${file.reference.commons-logging-1.2-javadoc.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.com.mysql.jdbc_5.1.5.jar}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.org.json.jar}
+    ${file.reference.spring-aop-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-aop-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-aop-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-beans-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-beans-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-beans-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-context-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-context-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-context-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-context-support-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-context-support-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-context-support-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-core-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-core-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-core-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-expression-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-expression-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-expression-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-jdbc-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-jdbc-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-jdbc-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-orm-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-orm-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-orm-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-tx-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-tx-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-tx-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-web-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-web-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-web-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-webmvc-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-webmvc-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-webmvc-4.0.1.RELEASE.jar}:\
+    ${file.reference.spring-webmvc-portlet-4.0.1.RELEASE-javadoc.jar}:\
+    ${file.reference.spring-webmvc-portlet-4.0.1.RELEASE-sources.jar}:\
+    ${file.reference.spring-webmvc-portlet-4.0.1.RELEASE.jar}:\
+    ${file.reference.jackson-annotations-2.4.0.jar}:\
+    ${file.reference.jackson-core-2.4.1.jar}:\
+    ${file.reference.jackson-databind-2.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
